--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,6 @@
-asgiref==3.8.1
-bcrypt==3.2.0
-blinker==1.4
-certifi==2020.6.20
-chardet==4.0.0
-click==8.0.3
-colorama==0.4.4
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-defer==1.0.6
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-Django==5.0.3
-duplicity==0.8.21
-fasteners==0.14.1
-future==0.18.2
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
+asgiref==3.7.2
+Django==4.2.7
+Pillow==10.1.0
+sqlparse==0.4.4
+tzdata==2023.3
+psycopg2-binary==2.9.1
