--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,28 @@
-
 {
-"version": 2,
-"builds": [
-  {
-    "src": "petTrack/wsgi.py",
-    "use": "@vercel/python",
-    "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-  },
-  {
-    "src": "build_files.sh",
-    "use": "@vercel/static-build",
-    "config": {
-      "distDir": "staticfiles_build"
+  "version": 2,
+  "builds": [
+    {
+      "src": "petTrack/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "main/staticfiles"
+      }
     }
-  }
-],
-"routes": [
-  {
-    "src": "/static/(.*)",
-    "dest": "/static/$1"
-  },
-  {
-    "src": "/(.*)",
-    "dest": "petTrack/wsgi.py"
-  }
-]
+  ],
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "petTrack/wsgi.py"
+    }
+  ],
+  "outputDirectory": "main/staticfiles"
 }
